@@ -1,3 +1,9 @@
+2014-12-14  Jacob Fenton  <bocajnotnef@gmail.com>
+
+    * oxli/{__init__, fq2fa}.py, scripts/{fasq-to-fasta, pseudoxli}.py: 
+    Implemented oxli single entry point for fastq-to-fasta script
+	* test/test_scripts.py: added test for oxli-fastq-to-fasta_and_tag
+
 2014-12-08  Michael R. Crusoe  <mcrusoe@msu.edu>
 
     * doc/user/known_issues.txt: Document that multithreading leads to dropped
